Now note block is collapsed correctly.

--- a/personal_site/blog/static/css/style.css
+++ b/personal_site/blog/static/css/style.css
@@ -80,6 +80,10 @@ ul.nav li.menu-item a:hover{
     width: 90%;
 }
 
+.book-edit-icon{
+    margin-top: 10px;
+}
+
 .skills-wrapper {
 }
 
